chore: update cv files

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -11,8 +11,8 @@
     "about.heading": "ABOUT",
     "about.description": "As a passionate developer, I aspire to grow as a Software Developer or DevOps Engineer. With strong experience in Go (Golang), TypeScript, Python, and C#, I excel at building robust, scalable, and automated software solutions.<br /><br />My journey spans diverse industries — logistics, navigation, cybersecurity, and technology — where I&apos;ve honed my expertise in microservices, CI/CD pipelines, database management, and process automation.<br /><br />Driven by curiosity and a relentless desire to learn, I&apos;m particularly interested in automation and workflow optimization. I enjoy contributing to open-source projects, exploring new technologies, and pushing the boundaries of what software development and DevOps engineering can achieve.<br />",
     "about.buttonText": "Let's connect and build something amazing together!",
-    "about.cvLink": "/documents/CV Semenov Illia Dev-DevOps en.pdf",
-    "about.cvFileName": "CV Semenov Illia Dev-DevOps en.pdf",
+    "about.cvLink": "/documents/Semenov Illia Software CV.pdf",
+    "about.cvFileName": "Semenov Illia Software CV.pdf",
     "about.copyEmail": "Copy Email",
     "about.copied": "Copied!",
 
