--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -11,8 +11,8 @@
     "about.heading": "À PROPOS",
     "about.description": "Développeur passionné, j&apos;aspire à évoluer en tant que Software Developer ou DevOps Engineer. Fort d&apos;une solide expérience avec Go (Golang), TypeScript, Python et C#, j&apos;excelle dans la conception de solutions logicielles robustes, évolutives et automatisées.<br /><br />Mon parcours couvre des secteurs variés — logistique, navigation, cybersécurité, technologie — où j&apos;ai perfectionné mes compétences en microservices, pipelines CI/CD, gestion de bases de données et automatisation des processus.<br /><br />Animé par la curiosité et une volonté constante d&apos;apprendre, je m&apos;intéresse particulièrement à l&apos;automatisation et à l&apos;optimisation des flux de travail, tout en contribuant à des projets open-source et en explorant de nouvelles technologies. Mon objectif : repousser les limites de ce que permettent le développement logiciel et l&apos;ingénierie DevOps.<br />",
     "about.buttonText": "Connectons-nous et créons quelque chose d'incroyable ensemble !",
-    "about.cvLink": "/documents/CV Semenov Illia Dev-DevOps fr.pdf",
-    "about.cvFileName": "CV Semenov Illia Dev-DevOps fr.pdf",
+    "about.cvLink": "/documents/Semenov Illia - Dev - CV.pdf",
+    "about.cvFileName": "Semenov Illia - Dev - CV.pdf",
     "about.copyEmail": "Copier l'email",
     "about.copied": "Copié !",
 
